tests/NormalTests/paczka1/fuzzy1/21051897.err
Error in line 2: A113 S205 51,4
Error in line 3: mCRx74q3 A629 81,4
Error in line 7: A113 S594 86,8
Error in line 9: A113 S205 27,7
Error in line 27: 3ri9BD5f S594 67,0
Error in line 35: mCRx74q3 S594 99,1
